# lektor-limit-dependencies

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.in  README.md  lektor_limit_dependencies.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
tests/: conftest.py  test_functional.py  test_plugin.py
tests/test-site/content/: contents.lr
tests/test-site/models/: page.ini
tests/test-site/templates/: layout.html
