[metadata]
name = lektor-limit-dependencies
description = Lektor plugin to limit dependencies created by queries
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-limit-dependencies
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Text Processing

[options]
py_modules = lektor_limit_dependencies
install_requires =
    lektorlib
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    limit-dependencies = lektor_limit_dependencies:LimitDependenciesPlugin

[bdist_wheel]
universal = 1
